removed  background-attachment: fixed; on ios devices because of missing support

--- a/resources/scss/ceres/views/Category/_category-list.scss
+++ b/resources/scss/ceres/views/Category/_category-list.scss
@@ -178,9 +178,10 @@ category-item {
     }
 }
 
-/* IOS compatibility */
+/* IOS compatibility, missing background-attachment:fixed support*/
 html.ios {
     .parallax-img-container .parallax-img-container-inner[style^='background-image'] {
-        background-size: contain;
+        background-size: cover;
+        background-attachment: scroll;
     }
 }
